@@ -73,7 +73,7 @@ class TPanel extends TWebControl
 			else
 			{
 				$writer->addAttribute('id',$this->getClientID());
-				$this->getPage()->getClientScript()->registerDefaultButton($this, $button);
+				$this->getPage()->getClientScript()->registerDefaultButton($this->getClientID(), $button->getClientID());
 			}
 		}
 	}
